# simple-os

./: CMakeLists.txt  README.md
script/: img-write-osx.sh  qemu-debug-osx.sh
source/applib/: CMakeLists.txt
source/boot/: CMakeLists.txt  start.S
source/init/: CMakeLists.txt
source/kernel/: CMakeLists.txt
source/loader/: CMakeLists.txt
source/loop/: CMakeLists.txt
source/shell/: CMakeLists.txt
